registries/artifactory/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory
  namespace: artifactory
spec:
  serviceName: artifactory
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      containers:
      - name: artifactory
        image: releases-docker.jfrog.io/jfrog/artifactory-oss:7.71.5
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 8082
          name: https
        resources:
          requests:
            memory: "4Gi"
            cpu: "1000m"
          limits:
            memory: "8Gi"
            cpu: "2000m"
        volumeMounts:
        - name: artifactory-data
          mountPath: /opt/jfrog/artifactory/var
        readinessProbe:
          httpGet:
            path: /artifactory/api/system/ping
            port: 8081
          initialDelaySeconds: 180
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /artifactory/api/system/ping
            port: 8081
          initialDelaySeconds: 300
          periodSeconds: 10
          failureThreshold: 10
  volumeClaimTemplates:
  - metadata:
      name: artifactory-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 100Gi
